cmake_minimum_required(VERSION 3.0 )
project(TorchEx)
set(CMAKE_BUILD_TYPE Debug)
set(Torch_DIR "/home/hagia-sophia/Downloads/libtorch/share/cmake/Torch")
find_package(Torch REQUIRED)
include_directories(${CMAKE_SOURCE_DIR}/include)
add_executable(torchEx torchEx.cpp)
add_executable(exp exp.c src/hamil/E.cpp)
target_link_libraries(torchEx "${TORCH_LIBRARIES}")
target_link_libraries(exp m)
